      #542962)
    + Allow specifying which fields will be shown by "bts status".  (Closes:
      #499283, #323782)
    + Add "verbose" option to "bts status", which will also show fields that
      don't have a set value.
    + Add "done" command which sends a close command as well as Ccing the bug
      submitter.  (Closes: #482751)

  [ Patrick Schoenfeld ]
  * licensecheck: Add support for some common variants of the WTFPL

  [ Ryan Niebur ]
  * deb-reversion: Fix use with recent dpkg-dev, thanks to Salvatore
    Bonaccorso (Closes: #559702)

  [ Adam D. Barratt ]
  * Bump Standards-Version to 3.8.3.  No changes required.
  * build-rdeps: Correct spelling error in manpage ("ommitted" -> "omitted").
  * checkbashisms: Correct spelling error in manpage ("preceeded" ->
    "preceded").
  * decbommit: Correct spelling error in manpage ("commiting" ->
    "committing").

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Tue, 08 Dec 2009 10:01:04 +0100

devscripts (2.10.59) unstable; urgency=low

  [ James Vega ]
  * debrelease: Do not use .svn/deb-layout to determine debsdir if --debs-dir
    was used.  (Closes: #558172)
  * checkbashisms: Fix a false positive detection of ". $(foo bar)/baz" as
    attempting to pass arguments to a sourced script.  (Closes: #557639)

  [ Joachim Breitner ]
  * debcommit: Add support for having only debian/ under a svn, cvs or darcs
    VCS (Closes: #450878)

 -- James Vega <jamessan@debian.org>  Tue, 01 Dec 2009 00:16:53 -0500

devscripts (2.10.58) unstable; urgency=low

  * who-uploads: Correct the argument to wget's -O option.  Thanks to
    Yves-Alexis Perez for the patch.  (Closes: #557507)

 -- James Vega <jamessan@debian.org>  Sun, 22 Nov 2009 09:16:03 -0500

devscripts (2.10.57) unstable; urgency=low

  [ James Vega ]
  * debcommit: Fix gathering of "Closes" with dpkg >= 1.15.5.2.  (Closes:
    #557318)

  [ Ben Finney ]
  * Tighten default dirname regex to match a version only if it contains